# fp-homework

./: README.md
hw0/: README.md  hw0.cabal
hw0/src/: Lib.hs  Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs
hw1/: README.md  Setup.hs  hw1.cabal
hw1/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs
hw2/: README.md  hw2.cabal
hw2/src/: Task1.hs  Task2.hs  Task2Monad.hs  Task2MonadFish.hs  Task2MonadJoin.hs  Task3.hs
hw2/test/: Task1Spec.hs  Task2Spec.hs  Task3Spec.hs
hw3/: README.md  hw3.cabal
hw3/app/: Main.hs
hw3/src/: GrammarExpressions.hs  Interpreter.hs  Parser.hs
hw4/: LICENSE  README.md  hw4.cabal
hw4/app/: Main.hs
hw4/benchmark/: Main.hs  Task1Benchmark.hs  Task2Benchmark.hs  Task3Benchmark.hs
hw4/src/: Task1.hs  Task2.hs  Task3.hs
hw4/test/: Task1Spec.hs  Task2Spec.hs  Task3Spec.hs
