name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/Walingar/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Rykunov Nikolay
maintainer:          Walingar@mail.ru
copyright:           2019 Rykunov Nikolay

category:            Web
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest  >=1.0.6 && <1.1

library
  hs-source-dirs:      src
  exposed-modules:
      Task1
    , Task2
    , Task3
    , Task4
  ghc-options:         -Wall
  build-depends:
      base >= 4.9 && < 5
    , random
  default-language:    Haskell2010

test-suite doctests
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  build-depends:
      base
    , doctest           >=0.15 && <0.17
    , QuickCheck        >=2.12 && <2.13
    , hw1

  ghc-options:      -Wall -threaded
  hs-source-dirs:   test
  default-language: Haskell2010