name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/Walingar/fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Rykunov Nikolay
maintainer:          Walingar@mail.ru
copyright:           2019 Rykunov Nikolay

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Task1
                     , Task2
                     , Task2MonadInstances
                     , Task3
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , mtl
  default-language:    Haskell2010

test-suite hw2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw2
                     , hspec
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010