name:                hw4
version:             0.1.0.0
synopsis:            Synopsis for task 4
description:         Task 4 for FP ITMO course

homepage:            https://github.com/Walingar/fp-homework/tree/master/hw4#readme
license:             MIT
license-file:        LICENSE
author:              Rykunov Nikolay
maintainer:          Walingar@mail.ru
copyright:           2019 Rykunov Nikolay

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

benchmark hw4-benchmark
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     benchmark
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N4
  build-depends:      base >=4.9 && <5,
                      hw4,
                      criterion
  other-modules:      Task1Benchmark
                    , Task2Benchmark
  default-language:   Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Task1
                     , Task2
                     , Task3
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , vector
  default-language:    Haskell2010

executable hw4
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw4
  default-language:    Haskell2010

test-suite hw4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw4
                     , hspec
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Task1Spec
                     , Task2Spec
  default-language:    Haskell2010
